#29 - Support custom dockerfile